<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".presentation.auth_home.HomeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height">

        <Button
            android:id="@+id/btnGoBack"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/btn_back"
            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_gravity="center|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_divider"
            android:layout_gravity="bottom"
            android:background="@color/gray" />
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/layout_padding">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalLeftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.025" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalRightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.975" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontalTopLogoGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/horizontal_top_guideline_logo_height" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontalBottomLogoGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/horizontal_bottom_guideline_logo_height" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontalButtonsGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/horizontal_guideline_separator_height" />

            <ImageView
                android:id="@+id/tvLogo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/layout_margin"
                app:layout_constraintBottom_toTopOf="@+id/horizontalBottomLogoGuideline"
                app:layout_constraintEnd_toStartOf="@+id/verticalRightGuideline"
                app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
                app:layout_constraintTop_toTopOf="@+id/horizontalTopLogoGuideline"
                app:srcCompat="@drawable/logo" />

            <Button
                android:id="@+id/btnLoginTab"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/layout_margin"
                android:fontFamily="@font/inter_bold"
                android:gravity="start|center_vertical"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/button_enter"
                android:textColor="@color/dark_gray"
                app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
                app:layout_constraintTop_toTopOf="@+id/horizontalButtonsGuideline" />

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/tab_separator_width"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/tab_separator_vertical_margin"
                android:layout_marginStart="@dimen/btn_tab_start_margin"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="@+id/btnLoginTab"
                app:layout_constraintStart_toEndOf="@+id/btnLoginTab"
                app:layout_constraintTop_toTopOf="@+id/btnLoginTab" />


            <Button
                android:id="@+id/btnRegisterTab"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/layout_margin"
                android:layout_marginStart="@dimen/btn_tab_start_margin"
                android:fontFamily="@font/inter_bold"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:text="@string/button_register"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/btnLoginTab"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/btnLoginTab" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_view_margin_top"
                android:elevation="0dp"
                app:cardCornerRadius="@dimen/card_view_corner_radius"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toStartOf="@+id/verticalRightGuideline"
                app:layout_constraintStart_toStartOf="@+id/verticalLeftGuideline"
                app:layout_constraintTop_toBottomOf="@+id/btnRegisterTab">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/form_padding"
                    android:paddingTop="@dimen/card_top_padding"
                    android:paddingBottom="@dimen/vertical_form_padding"
                    tools:context=".presentation.auth_register.RegisterFragment">


                    <TextView
                        android:id="@+id/tvName"
                        style="@style/CaptionRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_first"
                        android:text="@string/text_view_name" />

                    <EditText
                        android:id="@+id/etName"
                        style="@style/Body1Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_second"
                        android:background="@drawable/background"
                        android:hint="@string/et_name_hint"
                        android:minHeight="@dimen/edit_text_min_height"
                        android:paddingStart="@dimen/edit_text_start_padding" />

                    <TextView
                        android:id="@+id/tvGender"
                        style="@style/CaptionRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_first"
                        android:text="@string/text_view_gender" />

                    <RadioGroup
                        android:id="@+id/rgGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_second"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbMale"
                            style="@style/Body1Regular"
                            android:textColor="@color/gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/radio_button_end_margin"
                            android:text="@string/male_gender" />

                        <RadioButton
                            android:id="@+id/rbFemale"
                            style="@style/Body1Regular"
                            android:textColor="@color/gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female_gender" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/tvBirthday"
                        style="@style/CaptionRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_first"
                        android:text="@string/text_view_birthday" />

                    <EditText
                        android:id="@+id/etBirthday"
                        style="@style/Body1Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_second"
                        android:background="@drawable/background"
                        android:hint="@string/et_birthday_hint"
                        android:minHeight="@dimen/edit_text_min_height"
                        android:paddingStart="@dimen/edit_text_start_padding" />

                    <TextView
                        android:id="@+id/tvNumber"
                        style="@style/CaptionRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_first"
                        android:text="@string/text_view_number" />

                    <EditText
                        android:id="@+id/etPhoneNumber"
                        style="@style/Body1Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_second"
                        android:background="@drawable/background"
                        android:hint="@string/et_phone_number_hint"
                        android:inputType="phone"
                        android:minHeight="@dimen/edit_text_min_height"
                        android:paddingStart="@dimen/edit_text_start_padding" />

                    <TextView
                        android:id="@+id/tvEmail"
                        style="@style/CaptionRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_first"
                        android:text="@string/text_view_email" />

                    <EditText
                        android:id="@+id/etEmail"
                        style="@style/Body1Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_second"
                        android:background="@drawable/background"
                        android:hint="@string/et_email_hint"
                        android:minHeight="@dimen/edit_text_min_height"
                        android:paddingStart="@dimen/edit_text_start_padding" />

                    <TextView
                        android:id="@+id/tvCompanyName"
                        style="@style/CaptionRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_first"
                        android:text="@string/text_view_company_name" />

                    <EditText
                        android:id="@+id/etCompanyName"
                        style="@style/Body1Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_second"
                        android:background="@drawable/background"
                        android:hint="@string/et_company_name_hint"
                        android:minHeight="@dimen/edit_text_min_height"
                        android:paddingStart="@dimen/edit_text_start_padding" />

                    <TextView
                        android:id="@+id/tvCompanyServiceNumber"
                        style="@style/CaptionRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_first"
                        android:text="@string/text_view_company_service_number" />

                    <EditText
                        android:id="@+id/etServiceNumber"
                        style="@style/Body1Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_second"
                        android:background="@drawable/background"
                        android:hint="@string/et_service_number_hint"
                        android:minHeight="@dimen/edit_text_min_height"
                        android:paddingStart="@dimen/edit_text_start_padding" />

                    <TextView
                        android:id="@+id/tvLogin"
                        style="@style/CaptionRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_first"
                        android:text="@string/et_login_hint" />

                    <EditText
                        android:id="@+id/etLogin"
                        style="@style/Body1Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_second"
                        android:background="@drawable/background"
                        android:hint="@string/et_login_hint"
                        android:minHeight="@dimen/edit_text_min_height"
                        android:paddingStart="@dimen/edit_text_start_padding" />

                    <TextView
                        android:id="@+id/tvPassword"
                        style="@style/CaptionRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_first"
                        android:text="@string/text_view_password" />

                    <EditText
                        android:id="@+id/etPassword"
                        style="@style/Body1Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_second"
                        android:background="@drawable/background"
                        android:hint="@string/et_password_hint"
                        android:inputType="textPassword"
                        android:minHeight="@dimen/edit_text_min_height"
                        android:paddingStart="@dimen/edit_text_start_padding" />

                    <TextView
                        android:id="@+id/tvPasswordConfirm"
                        style="@style/CaptionRegular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_first"
                        android:text="@string/text_view_confirm_password" />

                    <EditText
                        android:id="@+id/etConfirmPassword"
                        style="@style/Body1Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_margin_second"
                        android:background="@drawable/background"
                        android:hint="@string/et_password_hint"
                        android:inputType="textPassword"
                        android:minHeight="@dimen/edit_text_min_height"
                        android:paddingStart="@dimen/edit_text_start_padding" />

                    <RadioButton
                        android:id="@+id/rbConfirmData"
                        style="@style/Body2Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:checked="false"
                        android:text="@string/rb_confirm_data"
                        android:textColor="@color/black" />


                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/home_button_reg_height"
                        android:layout_marginVertical="@dimen/top_margin_first"
                        android:alpha="0.7"
                        android:text="@string/btn_register_text" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>